--- a/app/index.html
+++ b/app/index.html
@@ -2,18 +2,31 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>ft_box</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+
+
+    <webview id="foo" src="https://intra.42.fr/" style="display:inline-flex; width:100%; height:555px"></webview>
+
 
     <script>
-      // You can also require other files to run in this process
-      require('./renderer.js')
+      require('../srcs/renderer.js')
+      onload = () => {
+        const webview = document.querySelector('webview')
+        const indicator = document.querySelector('.indicator')
+
+        const loadstart = () => {
+          indicator.innerText = 'loading...'
+        }
+
+        const loadstop = () => {
+          indicator.innerText = ''
+        }
+
+        webview.addEventListener('did-start-loading', loadstart)
+        webview.addEventListener('did-stop-loading', loadstop)
+      }
     </script>
   </body>
 </html>
