--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 
   <body>
 
-    <webview id="foo" src="https://intra.42.fr/" style="display:inline-flex; width:100%; height:555px"></webview>
+    <webview id="foo" src="https://intra.42.fr/"></webview>
 
     <!-- Javascript files
     ================================================== -->
