--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,9 @@
   <body>
 
     <webview id="foo" src="https://intra.42.fr/"></webview>
+    <webview id="foo" src="https://cantina.42.us.org/"></webview>
+    <webview id="foo" src="https://ambassador.42.us.org/"></webview>
+    <webview id="foo" src="https://42schoolsiliconvalley.slack.com/"></webview>
 
     <!-- Javascript files
     ================================================== -->
