--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
     <!-- CSS Stylesheets
     ================================================== -->
+    <link rel="stylesheet" href="css/normalize.min.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
 
     <!-- Fonts
