Added cantina, ambassadors and slack radio buttons

--- a/app/index.html
+++ b/app/index.html
@@ -22,16 +22,37 @@
 
   <body>
 
-    <!--
-    <webview id="foo" src="https://cantina.42.us.org/"></webview>
-    <webview id="foo" src="https://ambassador.42.us.org/"></webview>
-    <webview id="foo" src="https://42schoolsiliconvalley.slack.com/"></webview>
-    -->
-
     <!-- Intra -->
     <input id="intra" type="radio" name="tabs" checked />
-    <label for="intra"><i class="fa fa-code"></i><span>Intra</span></label>
-    <webview id="foo" src="https://intra.42.fr/"></webview>
+    <label for="intra">
+      <i class="fa fa-code"></i>
+      <span>Intra</span>
+    </label>
+    <webview id="intra" src="https://intra.42.fr/"></webview>
+
+    <!-- Cantina -->
+    <input id="intra" type="radio" name="tabs" />
+    <label for="intra">
+      <i class="fa fa-code"></i>
+      <span>Cantina</span>
+    </label>
+    <webview id="cantina" src="https://cantina.42.us.org/"></webview>
+
+    <!-- Ambassadors -->
+    <input id="intra" type="radio" name="tabs" />
+    <label for="intra">
+      <i class="fa fa-code"></i>
+      <span>Ambassadors</span>
+    </label>
+    <webview id="ambassadors" src="https://ambassador.42.us.org/"></webview>
+
+    <!-- Slack -->
+    <input id="intra" type="radio" name="tabs" />
+    <label for="intra">
+      <i class="fa fa-code"></i>
+      <span>Slack</span>
+    </label>
+    <webview id="slack" src="https://42schoolsiliconvalley.slack.com/"></webview>
 
     <!-- Javascript files
     ================================================== -->
