Updated font-awesome icons

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <!-- Intra -->
     <input id="intra" type="radio" name="tabs" checked />
     <label for="intra">
-      <i class="fa fa-code"></i>
+      <i class="fa fa-home"></i>
       <span>Intra</span>
     </label>
     <webview id="intra" src="https://intra.42.fr/"></webview>
@@ -33,7 +33,7 @@
     <!-- Cantina -->
     <input id="intra" type="radio" name="tabs" />
     <label for="intra">
-      <i class="fa fa-code"></i>
+      <i class="fa fa-cutlery"></i>
       <span>Cantina</span>
     </label>
     <webview id="cantina" src="https://cantina.42.us.org/"></webview>
@@ -41,7 +41,7 @@
     <!-- Ambassadors -->
     <input id="intra" type="radio" name="tabs" />
     <label for="intra">
-      <i class="fa fa-code"></i>
+      <i class="fa fa-users"></i>
       <span>Ambassadors</span>
     </label>
     <webview id="ambassadors" src="https://ambassador.42.us.org/"></webview>
@@ -49,7 +49,7 @@
     <!-- Slack -->
     <input id="intra" type="radio" name="tabs" />
     <label for="intra">
-      <i class="fa fa-code"></i>
+      <i class="fa fa-slack"></i>
       <span>Slack</span>
     </label>
     <webview id="slack" src="https://42schoolsiliconvalley.slack.com/"></webview>
