Fixed id name for tabs

--- a/app/index.html
+++ b/app/index.html
@@ -23,32 +23,32 @@
   <body>
 
     <!-- Intra -->
-    <input id="intra" type="radio" name="tabs" checked />
-    <label for="intra">
+    <input id="intra-tab" type="radio" name="tabs" checked />
+    <label for="intra-tab">
       <i class="fa fa-home"></i>
       <span>Intra</span>
     </label>
     <webview id="intra" src="https://intra.42.fr/"></webview>
 
     <!-- Cantina -->
-    <input id="intra" type="radio" name="tabs" />
-    <label for="intra">
+    <input id="cantina-tab" type="radio" name="tabs" />
+    <label for="cantina-tab">
       <i class="fa fa-cutlery"></i>
       <span>Cantina</span>
     </label>
     <webview id="cantina" src="https://cantina.42.us.org/"></webview>
 
     <!-- Ambassadors -->
-    <input id="intra" type="radio" name="tabs" />
-    <label for="intra">
+    <input id="ambassadors-tab" type="radio" name="tabs" />
+    <label for="ambassadors-tab">
       <i class="fa fa-users"></i>
       <span>Ambassadors</span>
     </label>
     <webview id="ambassadors" src="https://ambassador.42.us.org/"></webview>
 
     <!-- Slack -->
-    <input id="intra" type="radio" name="tabs" />
-    <label for="intra">
+    <input id="slack-tab" type="radio" name="tabs" />
+    <label for="slack-tab">
       <i class="fa fa-slack"></i>
       <span>Slack</span>
     </label>
