Added section tags

--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,9 @@
       <i class="fa fa-home"></i>
       <span>Intra</span>
     </label>
-    <webview id="intra" src="https://intra.42.fr/"></webview>
+    <section id="intra-section">
+      <webview id="intra" src="https://intra.42.fr/"></webview>
+    </section>
 
     <!-- Cantina -->
     <input id="cantina-tab" type="radio" name="tabs" />
@@ -36,7 +38,9 @@
       <i class="fa fa-cutlery"></i>
       <span>Cantina</span>
     </label>
-    <webview id="cantina" src="https://cantina.42.us.org/"></webview>
+    <section id="cantina-section">
+      <webview id="cantina" src="https://cantina.42.us.org/"></webview>
+    </section>
 
     <!-- Ambassadors -->
     <input id="ambassadors-tab" type="radio" name="tabs" />
@@ -44,7 +48,9 @@
       <i class="fa fa-users"></i>
       <span>Ambassadors</span>
     </label>
-    <webview id="ambassadors" src="https://ambassador.42.us.org/"></webview>
+    <section id="intra-section">
+      <webview id="ambassadors" src="https://ambassador.42.us.org/"></webview>
+    </section>
 
     <!-- Slack -->
     <input id="slack-tab" type="radio" name="tabs" />
@@ -52,7 +58,9 @@
       <i class="fa fa-slack"></i>
       <span>Slack</span>
     </label>
-    <webview id="slack" src="https://42schoolsiliconvalley.slack.com/"></webview>
+    <section id="intra-section">
+      <webview id="slack" src="https://42schoolsiliconvalley.slack.com/"></webview>
+    </section>
 
     <!-- Javascript files
     ================================================== -->
