Added section style

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
       <i class="fa fa-users"></i>
       <span>Ambassadors</span>
     </label>
-    <section id="intra-section">
+    <section id="ambassadors-section">
       <webview id="ambassadors" src="https://ambassador.42.us.org/"></webview>
     </section>
 
@@ -58,7 +58,7 @@
       <i class="fa fa-slack"></i>
       <span>Slack</span>
     </label>
-    <section id="intra-section">
+    <section id="slack-section">
       <webview id="slack" src="https://42schoolsiliconvalley.slack.com/"></webview>
     </section>
 
